# BasicOfProgrammingCourse

./: CMakeLists.txt  discret_math.c  exam.c  ize_t n, size_t baseTypeSize);  lab_16.c  lab_18.c  lab_19.c  main.c
lib/: CMakeLists.txt
lib/algorithms/: CMakeLists.txt  algorithm.c  algorithm.h
lib/algorithms/array/: array.c  array.h
lib/data_structures/: CMakeLists.txt
lib/data_structures/bitset/: bitset.c  bitset.h
lib/data_structures/matrix/: matrix.c  matrix.h
lib/data_structures/order_array_set/: order_array_set.c  order_array_set.h
lib/data_structures/string_/: string_.c  string_.h
lib/data_structures/unorder_array_set/: unorder_array_set.c  unorder_array_set.h
lib/data_structures/vector/: vector.c  vector.h  vector_void.c  vector_void.h
lib/data_structures/vector_void/: vector_void.c  vector_void.h
text/: zadanie1.txt  zadanie10_result.txt  zadanie10f.txt  zadanie10g.txt  zadanie1_result.txt  zadanie2.txt  zadanie2_result.txt  zadanie3.txt  zadanie4.txt  zadanie4_result.txt  zadanie5.txt  zadanie5_result.txt  zadanie6_result.txt  zadanie7.txt  zadanie7_result.txt  zadanie8.txt  zadanie8_result.txt  zadanie9.txt  zadanie9_result.txt
