add_library(data_structures
            bitset/bitset.c
            unorder_array_set/unorder_array_set.c
            order_array_set/order_array_set.c
            vector_void/vector_void.c
            matrix/matrix.c
            string_/string_.c)


#target_link_libraries(data_structures algorithms)
